# llm-application-with-rag

./: README.md  evaluate.ipynb  langchain_llm_test.ipynb  main.py  pyproject.toml  rag_with_chroma.ipynb  rag_with_pinecone.ipynb  rag_with_pinecone_data_preprocessing.ipynb  rag_without_langchain_chroma.ipynb  tax.docx  tax_with_markdown.docx  tax_with_table.docx
.devcontainer/: devcontainer.json
simple_chatbot/: config.py  ingest.py  main.py  pyproject.toml  pyproject.toml.bak  rag_chain.py  requirements.txt  retriever.py
streamlit_practice/: chat.py  config.py  llm.py  pyproject.toml
