[project]
name = "llm-application-with-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "docx2txt>=0.9",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langchain-upstage>=0.7.5",
    "langchainhub>=0.1.21",
    "openai>=2.8.1",
    "pypandoc>=1.16.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]
