[tool.poetry]
name = "streamlit-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
langchain = ">=1.1.0"
langchain-core = ">=1.1.0"
langchain-openai = ">=1.1.0"
langchain-pinecone = ">=0.2.13"
python-dotenv = ">=1.2.1"
streamlit = ">=1.51.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"